--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fl_chart: ^0.55.0
   sticky_and_expandable_list: ^1.1.2
   grouped_list: ^5.1.2
+  flutter_calendar_carousel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
